--- a/style.css
+++ b/style.css
@@ -15,13 +15,19 @@ You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
 
-
 input
 {
+	font-size: xx-large;
 	font-family: monospace;
 }
 
 textarea
 {
+	font-size: x-large;
 	vertical-align: top;
+}
+
+button
+{
+	font-size: large;
 }
